--- a/frontend/snk2-react-app/src/App.css
+++ b/frontend/snk2-react-app/src/App.css
@@ -1,7 +1,8 @@
 html {
   min-height: 100%;
   width: 100%;
-  padding: 0;
+  padding: 0 10px;
+  
 }
 
 a {
@@ -50,4 +51,9 @@ a {
   color: white;
 }
 
+.news-item-ava {
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+}
 /* BLINKING FX */
