--- a/frontend/snk2-react-app/src/css/mycss.css
+++ b/frontend/snk2-react-app/src/css/mycss.css
@@ -1,18 +1,27 @@
 html {
-    min-height: 100%;
-    width: 100%;
-    padding: 0;
+  min-height: 100%;
+  width: 100%;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background: url('../res/Snkv2.svg') no-repeat;
-    background-size: 100% auto;
+  width: 100%;
+  height: 100%;
+  background: url('../res/Snkv2.svg') no-repeat;
+  background-size: 100% auto;
+  
+  font-family: 'Tangerine', serif;
+  font-size: 48px;
+}
+
+.news-item-ava {
+  border-radius: 25%;
+  width: 15px !important;
+  height: 15px !important;
 }
 
 /* BLINKING FX */
